--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.client_control">
+    package="com.example.alura_flutter_client_control">
    <application
-        android:label="client_control"
+        android:label="alura_flutter_client_control"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
